<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/btnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:background="@color/colorPrimaryDark"
            android:text="@string/register_button_text"
            android:textAllCaps="true"
            android:textColor="@color/colorIcons"
            android:textSize="@dimen/flash_login_btn_text_size"
            android:textStyle="bold" />


        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:background="@color/colorPrimaryDark"
            android:text="|"
            android:textAllCaps="true"
            android:textColor="@color/colorIcons"
            android:textSize="22sp" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:background="@color/colorPrimaryDark"
            android:text="@string/login_button_text"
            android:textAllCaps="true"
            android:textColor="@color/colorIcons"
            android:textSize="@dimen/flash_login_btn_text_size"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/forgotLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnLayout"
        android:layout_marginBottom="30dp"
        android:gravity="right"
        android:orientation="vertical"
        android:paddingRight="@dimen/margin">

        <TextView
            android:id="@+id/forgotBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/flash_login_btn_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/forgotLayout"
        android:orientation="vertical"
        android:padding="@dimen/margin">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:src="@mipmap/app_icon" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorSecondaryText" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorSecondaryText" />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />

    </LinearLayout>


</RelativeLayout>