<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nice.nice.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".15">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/taskName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:hint="@string/task_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimaryDark" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/taskDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:hint="@string/task_description"
                    android:imeOptions="actionNext"
                    android:inputType="textMultiLine"
                    android:maxLines="3"
                    android:singleLine="false"
                    android:textColor="@color/colorPrimaryDark" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pickCalendar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".15"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight=".15"
                android:padding="@dimen/small_margin"
                android:src="@drawable/ic_date_range_black_48dp" />


            <EditText
                android:id="@+id/dateTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_weight=".85"
                android:editable="false"
                android:hint="@string/enter_task_deadline" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".15">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/eventAssign"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/assign_to"></EditText>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <MultiAutoCompleteTextView
                    android:id="@+id/eventTags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tags"></MultiAutoCompleteTextView>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pickPriority"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight=".15"
                android:padding="@dimen/nav_header_vertical_spacing">

                <ImageView
                    android:id="@+id/priorityColorPick"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent" />

            </LinearLayout>


            <Spinner
                android:id="@+id/priorityPick"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_weight=".85" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
